--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en-GB">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Professional home services across Greater London. Same-day emergency repairs, fully licensed & insured. Call 020 1234 5678 for free quotes. 15+ years experience.">
+    <meta name="description"
+        content="Professional home services across Greater London. Same-day emergency repairs, fully licensed & insured. Call 020 1234 5678 for free quotes. 15+ years experience.">
     <title>Professional Home Services London | Plumbing, Electrical & More</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/svg+xml" href="assets/icons/favicon.jpeg">
@@ -48,6 +50,7 @@
     }
     </script>
 </head>
+
 <body>
     <!-- Header -->
     <header class="header">
@@ -91,7 +94,9 @@
                     <span class="hero-title-accent">South London</span>
                 </h1>
                 <p class="hero-description">
-                    Transform your vision into reality with seasoned expertise in groundwork and construction. From driveways to commercial projects, we deliver premium results with transparent pricing and guaranteed satisfaction.
+                    Transform your vision into reality with seasoned expertise in groundwork and construction. From
+                    driveways to commercial projects, we deliver premium results with transparent pricing and guaranteed
+                    satisfaction.
                 </p>
                 <div class="hero-buttons">
                     <a href="tel:+442012345678" class="btn btn-hero-primary">
@@ -110,7 +115,8 @@
             <div class="hero-form">
                 <div class="quote-form">
                     <h2>Get Your Free Quote</h2>
-                    <p class="form-description">Request your free, fast quote - we'll call you back quickly during business hours.</p>
+                    <p class="form-description">Request your free, fast quote - we'll call you back quickly during
+                        business hours.</p>
                     <form id="quote-form" action="#" method="post">
                         <div class="form-row">
                             <input type="text" name="name" placeholder="Your Name" class="form-input" required>
@@ -120,7 +126,8 @@
                             <input type="email" name="email" placeholder="Email" class="form-input" required>
                             <input type="text" name="postcode" placeholder="Postcode" class="form-input" required>
                         </div>
-                        <textarea name="message" placeholder="Tell us about your project..." class="form-textarea"></textarea>
+                        <textarea name="message" placeholder="Tell us about your project..."
+                            class="form-textarea"></textarea>
                         <button type="submit" class="btn btn-form">Get Free Quote</button>
                         <p class="form-disclaimer">No obligation. Completely free consultation.</p>
                     </form>
@@ -134,41 +141,44 @@
         <div class="container">
             <h2 class="section-title">Our Expert Services</h2>
             <p class="section-description">
-                Professional home services with guaranteed satisfaction. From emergency repairs to complete renovations, we deliver premium results every time.
+                Professional home services with guaranteed satisfaction. From emergency repairs to complete renovations,
+                we deliver premium results every time.
             </p>
             <div class="services-grid">
                 <div class="service-card">
-                    <img src="assets/images/service-resin-driveways.jpeg" alt="Resin Driveways" class="service-thumb">
+                    <img src="assets/images/service-resin-driveways.png" alt="Resin Driveways" class="service-thumb">
                     <h3>Resin Driveways</h3>
                     <p>Permeable, durable resin bound surfaces for modern driveways</p>
                     <a href="contact.html#quote" class="btn btn-service">Request Quote →</a>
                 </div>
                 <div class="service-card">
-                    <img src="assets/images/service-block-paving.jpeg" alt="Block Paving" class="service-thumb">
+                    <img src="assets/images/service-block-paving.png" alt="Block Paving" class="service-thumb">
                     <h3>Block Paving</h3>
                     <p>Traditional and contemporary block paving solutions</p>
                     <a href="contact.html#quote" class="btn btn-service">Request Quote →</a>
                 </div>
                 <div class="service-card">
-                    <img src="assets/images/service-tarmac.jpeg" alt="Tarmac Driveways" class="service-thumb">
+                    <img src="assets/images/service-tarmac.png" alt="Tarmac Driveways" class="service-thumb">
                     <h3>Tarmac Driveways</h3>
                     <p>Cost-effective tarmac surfacing for residential driveways</p>
                     <a href="contact.html#quote" class="btn btn-service">Request Quote →</a>
                 </div>
                 <div class="service-card">
-                    <img src="assets/images/service-commercial-tarmac.jpeg" alt="Commercial Tarmac" class="service-thumb">
+                    <img src="assets/images/service-commercial-tarmac.png" alt="Commercial Tarmac"
+                        class="service-thumb">
                     <h3>Commercial Tarmac</h3>
                     <p>Heavy-duty tarmac solutions for commercial properties</p>
                     <a href="contact.html#quote" class="btn btn-service">Request Quote →</a>
                 </div>
                 <div class="service-card">
-                    <img src="assets/images/service-groundwork.jpeg" alt="Groundwork Services" class="service-thumb">
+                    <img src="assets/images/service-groundwork.png" alt="Groundwork Services" class="service-thumb">
                     <h3>Groundwork Services</h3>
                     <p>Complete groundwork solutions for construction projects</p>
                     <a href="contact.html#quote" class="btn btn-service">Request Quote →</a>
                 </div>
                 <div class="service-card">
-                    <img src="assets/images/service-excavation.jpeg" alt="Excavation &amp; Foundations" class="service-thumb">
+                    <img src="assets/images/service-excavation.png" alt="Excavation &amp; Foundations"
+                        class="service-thumb">
                     <h3>Excavation &amp; Foundations</h3>
                     <p>Professional excavation and foundation laying services</p>
                     <a href="contact.html#quote" class="btn btn-service">Request Quote →</a>
@@ -182,7 +192,8 @@
         <div class="container">
             <h2 class="section-title">How It Works</h2>
             <p class="section-description">
-                Getting professional home services has never been easier. Our streamlined process ensures you get quality results with minimal hassle.
+                Getting professional home services has never been easier. Our streamlined process ensures you get
+                quality results with minimal hassle.
             </p>
             <div class="steps-container">
                 <div class="step">
@@ -191,7 +202,8 @@
                         <div class="step-icon-inner">📞</div>
                     </div>
                     <h3>Contact Us</h3>
-                    <p>Call us or fill out our quick form to describe your project needs. We respond within 15 minutes.</p>
+                    <p>Call us or fill out our quick form to describe your project needs. We respond within 15 minutes.
+                    </p>
                 </div>
                 <div class="step">
                     <div class="step-icon">
@@ -199,7 +211,8 @@
                         <div class="step-icon-inner">📅</div>
                     </div>
                     <h3>Free Assessment</h3>
-                    <p>We schedule a convenient time to visit your property and provide a detailed, no-obligation quote.</p>
+                    <p>We schedule a convenient time to visit your property and provide a detailed, no-obligation quote.
+                    </p>
                 </div>
                 <div class="step">
                     <div class="step-icon">
@@ -207,7 +220,8 @@
                         <div class="step-icon-inner">✅</div>
                     </div>
                     <h3>Expert Completion</h3>
-                    <p>Our certified professionals complete your project with premium materials and guaranteed workmanship.</p>
+                    <p>Our certified professionals complete your project with premium materials and guaranteed
+                        workmanship.</p>
                 </div>
             </div>
         </div>
@@ -218,7 +232,8 @@
         <div class="container">
             <h2 class="section-title">Why Choose Us?</h2>
             <p class="section-description">
-                We're not just another home service company. We're your trusted local experts committed to delivering exceptional results.
+                We're not just another home service company. We're your trusted local experts committed to delivering
+                exceptional results.
             </p>
             <div class="features-grid">
                 <div class="feature-card">
@@ -296,7 +311,8 @@
             </div>
             <h2 class="section-title">What Our Customers Say</h2>
             <p class="section-description">
-                Don't just take our word for it. See why customers across South London trust us with their groundwork projects.
+                Don't just take our word for it. See why customers across South London trust us with their groundwork
+                projects.
             </p>
             <div class="reviews-preview-grid">
                 <div class="review-card-preview">
@@ -345,17 +361,20 @@
             </p>
             <div class="projects-preview-grid">
                 <div class="project-card-preview">
-                    <img src="assets/images/project-resin.jpeg" alt="Modern Resin Driveway - Beckenham" class="project-thumb">
+                    <img src="assets/images/project-resin.png" alt="Modern Resin Driveway - Beckenham"
+                        class="project-thumb">
                     <h3>Modern Resin Driveway - Beckenham</h3>
                     <p>Complete resin bound driveway installation with decorative borders</p>
                 </div>
                 <div class="project-card-preview">
-                    <img src="assets/images/project-block.jpeg" alt="Block Paving Restoration - Bromley" class="project-thumb">
+                    <img src="assets/images/project-block.png" alt="Block Paving Restoration - Bromley"
+                        class="project-thumb">
                     <h3>Block Paving Restoration - Bromley</h3>
                     <p>Heritage block paving restoration maintaining original character</p>
                 </div>
                 <div class="project-card-preview">
-                    <img src="assets/images/project-commercial.jpeg" alt="Commercial Tarmac Surface - Croydon" class="project-thumb">
+                    <img src="assets/images/project-commercial.png" alt="Commercial Tarmac Surface - Croydon"
+                        class="project-thumb">
                     <h3>Commercial Tarmac Surface - Croydon</h3>
                     <p>Heavy-duty commercial tarmac surfacing for industrial facility</p>
                 </div>
@@ -371,7 +390,8 @@
         <div class="container">
             <h2 class="section-title">Frequently Asked Questions</h2>
             <p class="section-description">
-                Got questions? We've got answers. Find everything you need to know about our services, pricing, and process.
+                Got questions? We've got answers. Find everything you need to know about our services, pricing, and
+                process.
             </p>
             <div class="faqs-preview-list">
                 <div class="faq-item-preview">
@@ -380,7 +400,9 @@
                         <span class="faq-chevron">▼</span>
                     </div>
                     <div class="faq-answer-preview">
-                        <p>Yes, we provide completely free, no-obligation quotes for all our services. Simply contact us and we'll arrange a convenient time to assess your project and provide a detailed estimate.</p>
+                        <p>Yes, we provide completely free, no-obligation quotes for all our services. Simply contact us
+                            and we'll arrange a convenient time to assess your project and provide a detailed estimate.
+                        </p>
                     </div>
                 </div>
                 <div class="faq-item-preview">
@@ -389,7 +411,8 @@
                         <span class="faq-chevron">▼</span>
                     </div>
                     <div class="faq-answer-preview">
-                        <p>Absolutely. We are fully licensed and carry comprehensive public liability insurance up to £2M. All our team members are certified professionals with the necessary qualifications.</p>
+                        <p>Absolutely. We are fully licensed and carry comprehensive public liability insurance up to
+                            £2M. All our team members are certified professionals with the necessary qualifications.</p>
                     </div>
                 </div>
                 <div class="faq-item-preview">
@@ -398,7 +421,9 @@
                         <span class="faq-chevron">▼</span>
                     </div>
                     <div class="faq-answer-preview">
-                        <p>We serve Greater London and the surrounding areas, including South East London, South London, and many other locations. Check our Areas page for a complete list, or contact us to see if we cover your location.</p>
+                        <p>We serve Greater London and the surrounding areas, including South East London, South London,
+                            and many other locations. Check our Areas page for a complete list, or contact us to see if
+                            we cover your location.</p>
                     </div>
                 </div>
                 <div class="faq-item-preview">
@@ -407,7 +432,8 @@
                         <span class="faq-chevron">▼</span>
                     </div>
                     <div class="faq-answer-preview">
-                        <p>Yes, we offer 24/7 emergency services for urgent repairs and critical situations. Our team is available round-the-clock to help when you need us most.</p>
+                        <p>Yes, we offer 24/7 emergency services for urgent repairs and critical situations. Our team is
+                            available round-the-clock to help when you need us most.</p>
                     </div>
                 </div>
                 <div class="faq-item-preview">
@@ -416,7 +442,8 @@
                         <span class="faq-chevron">▼</span>
                     </div>
                     <div class="faq-answer-preview">
-                        <p>We accept various payment methods including cash, bank transfer, and major credit/debit cards. Payment terms can be discussed during the quote process.</p>
+                        <p>We accept various payment methods including cash, bank transfer, and major credit/debit
+                            cards. Payment terms can be discussed during the quote process.</p>
                     </div>
                 </div>
             </div>
@@ -431,7 +458,8 @@
         <div class="container">
             <h2 class="section-title">Areas We Serve</h2>
             <p class="section-description">
-                Professional home services across Greater London. Serving local communities with pride for over 15 years.
+                Professional home services across Greater London. Serving local communities with pride for over 15
+                years.
             </p>
             <div class="areas-preview-content">
                 <div>
@@ -556,7 +584,8 @@
                 </div>
                 <div class="footer-testimonials">
                     <div class="testimonial">
-                        "Great service excellent communication, clean and very professional" — Customer Review, South London
+                        "Great service excellent communication, clean and very professional" — Customer Review, South
+                        London
                     </div>
                     <div class="testimonial">
                         "If I could rate 10 stars I would, as I am a very happy customer" — Verified Customer, Beckenham
@@ -580,4 +609,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
